@startuml
!include style.puml

MeetingSeries "1" --> "*" Minutes
Minutes "1" --> "*" Topic



class MeetingSeries {
    string project
    string name
}

class Minutes {
    Date date
    string[] participants
    string text
}


' ************************ notes
note right of (Topic)
    Details see separate
    class diagram
end note

@enduml
